--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    "GitHub": {
+        "Owner": "MakerSpaceGH",
+        "Repo": "Maker-Space",
+        "Token": "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"
+    },
+
+    "AllowedHosts": "*"
 }
